moneymaker/moneymaker-app.yml
apiVersion: v1
kind: Service
metadata:
  name: cid-moneymaker-client-service
  namespace: jd-mm
spec:
  selector:
    app: moneymaker
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker
  namespace: jd-mm
  labels:
    app: moneymaker
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: moneymaker
  template:
    metadata:
      labels:
        app: moneymaker
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: moneymaker
        image: trance0302/moneymaker-client:1.23
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /usr/share/nginx/html/assets/config
      volumes:
        - name: config-volume
          configMap:
            name: moneymaker-config
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: jd-mm
spec:
  selector:
    app: moneymaker-gateway
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker-gateway
  namespace: jd-mm
  labels:
    app: moneymaker-gateway
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: moneymaker-gateway
  template:
    metadata:
      labels:
        app: moneymaker-gateway
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: moneymaker-gateway
          image: trance0302/moneymaker-api-gateway:1.7
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-admin-service
  namespace: jd-mm
spec:
  selector:
    app: moneymaker-admin
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker-admin
  namespace: jd-mm
  labels:
    app: moneymaker-admin
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: moneymaker-admin
  template:
    metadata:
      labels:
        app: moneymaker-admin
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: moneymaker-admin
          image: trance0302/moneymaker-admin-service:1.7
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-transaction-service
  namespace: jd-mm
  labels:
    discoverable: "true"
spec:
  selector:
    app: moneymaker-transaction
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker-transaction
  namespace: jd-mm
  labels:
    app: moneymaker-transaction
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: moneymaker-transaction
  template:
    metadata:
      labels:
        app: moneymaker-transaction
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: moneymaker-transaction
          image: trance0302/moneymaker-transaction-service:1.13
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-account-service
  namespace: jd-mm
  labels:
    discoverable: "true"
spec:
  selector:
    app: moneymaker-account
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker-account
  namespace: jd-mm
  labels:
    app: moneymaker-account
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: moneymaker-account
  template:
    metadata:
      labels:
        app: moneymaker-account
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: moneymaker-account
          image: trance0302/moneymaker-account-service:2.5
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-budget-service
  namespace: jd-mm
  labels:
    discoverable: "true"
spec:
  selector:
    app: moneymaker-budget
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneymaker-budget
  namespace: jd-mm
  labels:
    app: moneymaker-budget
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: moneymaker-budget
  template:
    metadata:
      labels:
        app: moneymaker-budget
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
        - name: moneymaker-budget
          image: trance0302/moneymaker-budget-service:1.7
          imagePullPolicy: Always
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
          - containerPort: 8080
      imagePullSecrets:
      - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-mysql-service
  namespace: jd-mm
spec:
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
      
---

apiVersion: v1
kind: Endpoints
metadata:
  name: moneymaker-mysql-service
  namespace: jd-mm
subsets:
  - addresses:
        - ip: 192.168.40.61
    ports:
      - port: 3306

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-rabbitmq-service
  namespace: jd-mm
spec:
  ports:
  - protocol: TCP
    port: 5674
    targetPort: 5674
      
---

apiVersion: v1
kind: Endpoints
metadata:
  name: moneymaker-rabbitmq-service
  namespace: jd-mm
subsets:
  - addresses:
        - ip: 192.168.40.61
    ports:
      - port: 5674

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-rabbitmq-management-service
  namespace: jd-mm
spec:
  ports:
  - protocol: TCP
    port: 15674
    targetPort: 15674
      
---

apiVersion: v1
kind: Endpoints
metadata:
  name: moneymaker-rabbitmq-management-service
  namespace: jd-mm
subsets:
  - addresses:
        - ip: 192.168.40.61
    ports:
      - port: 15674
