moneymaker/rabbit-config.yml
apiVersion: v1
kind: Service
metadata:
  name: moneymaker-rabbitmq-service
  namespace: jd-mm
spec:
  clusterIP: None
  ports:
    - port: 5673
      targetPort: 5673

---

apiVersion: v1
kind: Endpoints
metadata:
  name: moneymaker-rabbitmq-service
  namespace: jd-mm
subsets:
  - addresses:
      - ip: 192.168.50.168
    ports:
      - port: 5673

---

apiVersion: v1
kind: Service
metadata:
  name: moneymaker-rabbitmq-management-service
  namespace: jd-mm
spec:
  ports:
    - protocol: TCP
      port: 15673
      targetPort: 15673

---

apiVersion: v1
kind: Endpoints
metadata:
  name: moneymaker-rabbitmq-management-service
  namespace: jd-mm
subsets:
  - addresses:
      - ip: 192.168.50.168
    ports:
      - port: 15673
