moneymaker/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: moneymaker
  namespace: jd-mm
spec:
  parentRefs:
    - name: factotum-gateway
      namespace: traefik
      sectionName: jaydamon-wildcard-https
  hostnames:
    - "moneymaker.jaydamon.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: gateway-service
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: cid-moneymaker-client-service
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mm-rabbit
  namespace: jd-mm
spec:
  parentRefs:
    - name: factotum-gateway
      namespace: traefik
      sectionName: jaydamon-wildcard-https
  hostnames:
    - "rabbit.jaydamon.com"
  rules:
    - backendRefs:
        - name: moneymaker-rabbitmq-management-service
          port: 15674
