moneymaker/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  namespace: jd-mm
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - moneymaker.jaydamon.com
    secretName: mm-issuer-key
  - hosts:
    - rabbit.jaydamon.com
    secretName: mm-rabbit-issuer-key
  rules:
  - host: moneymaker.jaydamon.com
    http:
      paths:
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway-service
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: cid-moneymaker-client-service
            port:
              number: 80
  - host: rabbit.jaydamon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moneymaker-rabbitmq-management-service
            port:
              number: 15674
